--- a/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.09-Mean-Median-Imputation-Sklearn.ipynb
+++ b/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.09-Mean-Median-Imputation-Sklearn.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "4       2198       2000.0         192     250000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
    "source": [
     "# let's load the House Prices dataset\n",
     "\n",
-    "data = pd.read_csv('../houseprice.csv', usecols=cols_to_use)\n",
+    "data = pd.read_csv('../../datasets/house-prices-advanced-regression-techniques/train.csv', usecols=cols_to_use)\n",
     "print(data.shape)\n",
     "data.head()"
    ]
@@ -230,24 +230,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "LotFrontage    0.177397\n",
-       "OverallQual    0.000000\n",
-       "MasVnrArea     0.005479\n",
-       "BsmtUnfSF      0.000000\n",
-       "TotalBsmtSF    0.000000\n",
-       "1stFlrSF       0.000000\n",
-       "GrLivArea      0.000000\n",
-       "GarageYrBlt    0.055479\n",
-       "WoodDeckSF     0.000000\n",
-       "SalePrice      0.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-a6f6b417dee1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# let's check the null values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1258,9 +1249,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fe_test",
+   "display_name": "basic",
    "language": "python",
-   "name": "fe_test"
+   "name": "basic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1272,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -1289,5 +1280,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
