--- a/HandsOnPythonCode/Section-03-Variable-Characteristics/03.2-Cardinality.ipynb
+++ b/HandsOnPythonCode/Section-03-Variable-Characteristics/03.2-Cardinality.ipynb
@@ -1416,9 +1416,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Similarly, the Adaboost model trained on the variable with high cardinality is overfit to the train set. Whereas the Adaboost trained on the low cardinal variable is not overfitting and therefore does a better job in generalising the predictions.\n",
     "\n",
@@ -1598,9 +1596,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fe_test",
+   "display_name": "basic",
    "language": "python",
-   "name": "fe_test"
+   "name": "basic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1612,7 +1610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -1629,5 +1627,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
