--- a/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.02-Mean-Median-Imputation.ipynb
+++ b/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.02-Mean-Median-Imputation.ipynb
@@ -948,9 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -983,9 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1761,9 +1757,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "**That is all for this demonstration**.\n",
     "\n",
@@ -1780,9 +1774,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fe_test",
+   "display_name": "basic",
    "language": "python",
-   "name": "fe_test"
+   "name": "basic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1794,7 +1788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -1817,5 +1811,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
