--- a/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.10-Arbitrary-Value-Imputation-Sklearn.ipynb
+++ b/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.10-Arbitrary-Value-Imputation-Sklearn.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "4       2198       2000.0         192     250000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,14 +219,14 @@
    "source": [
     "# let's load the House Prices dataset\n",
     "\n",
-    "data = pd.read_csv('../houseprice.csv', usecols=cols_to_use)\n",
+    "data = pd.read_csv('../../datasets/house-prices-advanced-regression-techniques/train.csv', usecols=cols_to_use)\n",
     "print(data.shape)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "((1022, 9), (438, 9))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,9 +1074,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fe_test",
+   "display_name": "basic",
    "language": "python",
-   "name": "fe_test"
+   "name": "basic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1088,7 +1088,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -1105,5 +1105,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
