--- a/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.13-MissingIndicator-Sklearn.ipynb
+++ b/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.13-MissingIndicator-Sklearn.ipynb
@@ -847,9 +847,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fe_test",
+   "display_name": "basic",
    "language": "python",
-   "name": "fe_test"
+   "name": "basic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -861,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -878,5 +878,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
