--- a/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.16-Mean-Median-Imputation-Feature-Engine.ipynb
+++ b/HandsOnPythonCode/Section-04-Missing-Data-Imputation/04.16-Mean-Median-Imputation-Feature-Engine.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
     "    'SalePrice'\n",
     "]\n",
     "\n",
-    "data = pd.read_csv('../houseprice.csv', usecols=cols_to_use)\n",
+    "data = pd.read_csv('../../datasets/house-prices-advanced-regression-techniques/train.csv', usecols=cols_to_use)\n",
     "data.head()"
    ]
   },
@@ -698,9 +698,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fe_test",
+   "display_name": "basic",
    "language": "python",
-   "name": "fe_test"
+   "name": "basic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -712,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -729,5 +729,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
