--- a/HandsOnPythonCode/Section-13-Putting-it-altogether/13.03-Assembling-pipeline-with-crossvalidation.ipynb
+++ b/HandsOnPythonCode/Section-13-Putting-it-altogether/13.03-Assembling-pipeline-with-crossvalidation.ipynb
@@ -622,9 +622,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fe_test",
+   "display_name": "basic",
    "language": "python",
-   "name": "fe_test"
+   "name": "basic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -636,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -659,5 +659,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
